--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,36 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@200;300;400&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
-
-
-
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
 
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
-html{
-    box-sizing: border-box;
-    font-size: 62.5%;
-    @media screen and (max-width: 1100px){
-        font-size: 55%;
-    }
-    @media screen and (max-width: 770px){
-        font-size: 50%;
-    }
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  @media screen and (max-width: 1100px) {
+    font-size: 55%;
+  }
+  @media screen and (max-width: 770px) {
+    font-size: 50%;
+  }
 }
-body{
-  
-    background-color: rgb(206, 192, 174);
-    color: rgb(48, 48, 48);
-    font-family: 'Poppins', sans-serif;
+body {
+  background-color: rgb(206, 192, 174);
+  color: rgb(48, 48, 48);
+  font-family: "Poppins", sans-serif;
 }
-
-
