--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,54 +1,53 @@
-.footer{
-    height: 70vh;
-    // background-image: linear-gradient($color-grey-light,  black);
+.footer {
+  height: 70vh;
+  // background-image: linear-gradient($color-grey-light,  black);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: $color-main-light;
+  padding-top: 5rem;
+  & a {
+    color: black;
+    text-decoration: none;
+    font-family: "Amatic SC", cursive;
+
+    padding: 1rem 2rem;
+    outline: none;
+    border: none;
+
+    background-color: transparent;
+    font-size: 5rem;
+
+    cursor: pointer;
+    opacity: 0.7;
+    transition: all 0.4s ease;
+    &:hover {
+      opacity: 1;
+      color: $color-main;
+      transform: scale(1.05);
+    }
+  }
+  &__img {
+    height: 15rem;
+  }
+
+  &__footnotes {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    background-color: $color-main-light;
-    padding-top: 5rem;
-    & a{
+    justify-content: space-between;
+    padding: 3rem;
 
-        color: black;
-        text-decoration: none;
-        font-family: 'Amatic SC', cursive;
-
-        padding: 1rem 2rem;
-        outline: none;
-        border: none;
-
-        background-color: transparent;
-        font-size: 5rem;
-
-        cursor: pointer;
-        opacity: .7;
-        transition: all .4s ease;
-        &:hover {
-            opacity: 1;
-            color: $color-main;
-            transform: scale(1.05);
-        }
+    & p {
+      font-size: 1.4rem;
     }
-    &__img{
-        height: 15rem;
+    & small {
+      font-size: 1.4rem;
+      & strong {
+        font-family: "Berkshire Swash", cursive;
+        font-size: 3rem;
+      }
     }
-    
-    &__footnotes{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 3rem;
-
-        & p{
-            font-size: 1.4rem;
-        }
-        & small{
-            font-size: 1.4rem;
-            & strong {
-                font-family: 'Berkshire Swash', cursive;
-                font-size: 3rem;
-            }
-        }
-    }
+  }
 }
