--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,46 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 
 @keyframes colorchange {
-    from{
-        background-color: black;
-    } to{
-        background-color: rgb(206, 192, 174);
-    }
+  from {
+    background-color: black;
+  }
+  to {
+    background-color: rgb(206, 192, 174);
+  }
 }
 
-.header{
+.header {
+  display: flex;
+  flex-direction: column;
 
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+
+  &__img {
+    width: 50%;
+  }
+  &__img-container {
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-
     align-items: center;
     justify-content: center;
-    background-size: cover;
-
-    &__img{
-        width: 50%;
-    }
-    &__img-container{
-
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-   
+  }
 }
-.heading-1{
-
-    height: 50vh;
-    font-family: 'Amatic SC', cursive;
-    font-weight: 400;
-    font-size: 8rem;
-    color: rgb(255, 255, 255) ;
-
-
-   
+.heading-1 {
+  height: 50vh;
+  font-family: "Amatic SC", cursive;
+  font-weight: 400;
+  font-size: 8rem;
+  color: rgb(255, 255, 255);
 }
-
-
