--- a/src/sass/_input.scss
+++ b/src/sass/_input.scss
@@ -1,18 +1,13 @@
-
-
-.input h2{
-    font-size: 18rem;
-    font-weight: 400;
-    opacity: .7;
-    margin: none;
-    text-shadow: 0 0 5rem rgba($color: #000000, $alpha: 1.0);
-    
+.input h2 {
+  font-size: 18rem;
+  font-weight: 400;
+  opacity: 0.7;
+  margin: none;
+  text-shadow: 0 0 5rem rgba($color: #000000, $alpha: 1);
 }
 .input {
-    height: 150vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-
+  height: 150vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
