--- a/src/sass/_journey.scss
+++ b/src/sass/_journey.scss
@@ -1,273 +1,205 @@
-
-
-
-$color-main-light : #ece9e9;
-$color-main : #cec0ae;
-$color-primary :  #7799c5;
+$color-main-light: #ece9e9;
+$color-main: #cec0ae;
+$color-primary: #7799c5;
 $color-secondary: #abd376;
-.icon{
-   
-    &__pt{
-        font-family: parisine-std, sans-serif;
-        font-weight: 600;
-        display: flex;
-        height: 4rem;
-        width: 4rem;
-        border-radius: 50%;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        font-size: 3rem; 
-        min-width: 4rem;
-    }
-    &__sn{
-        font-size: 4rem;
-    }
-    &__logo{
-        height: 4rem;
-    }
-    &__tr{
-        font-size: 3rem;
-    }
+.icon {
+  &__pt {
+    font-family: parisine-std, sans-serif;
+    font-weight: 600;
+    display: flex;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    min-width: 4rem;
+  }
+  &__sn {
+    font-size: 4rem;
+  }
+  &__logo {
+    height: 4rem;
+  }
+  &__tr {
+    font-size: 3rem;
+  }
 }
 
+.journey {
+  font-size: 1.4rem;
+  padding: 2rem 0 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  transition: all 0.4s;
 
-.journey{
-  
+  &__spec {
+    display: flex;
+    gap: 0.4rem;
+  }
+  &__info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10rem;
+    padding: 1rem;
+    background-color: white;
+    padding: 2rem;
+    opacity: 0.8;
+    margin-bottom: 2rem;
+    &:hover {
+      opacity: 1;
+    }
 
+    &__specs {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 3rem;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 
-    font-size: 1.4rem;
-    padding: 2rem 0 2rem 2rem;
+  &__section-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    transition: all .4s;
-
-
-    &__spec{
-        display: flex;
-        gap: .4rem;
-        
+    width: 100%;
+    &--closed {
+      & > div {
+        visibility: hidden;
+        display: none;
+      }
+      & > div > div {
+        display: none !important;
+        visibility: hidden;
+      }
     }
-    &__info{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 10rem;
-        padding: 1rem;
-        background-color: white;
-        padding: 2rem;
-        opacity: .8;
-        margin-bottom: 2rem;
-        &:hover {
-            opacity: 1;
-        }
-
-       
-
-      
-        &__specs{
-            display: flex;
-            flex-wrap: wrap;
-            gap: 3rem;
-            align-items: center;
-            justify-content: center;
-        }
-
-        
-    }
-    
-    &__section-list{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        &--closed{
-            & > div {
-                visibility: hidden;
-                display: none;
-            }
-            & > div > div  {
-                
-                display: none !important;
-                visibility: hidden;
-
-
-            }
-        }
-        
-
-    }
+  }
 }
 
+.section {
+  perspective: 140rem;
 
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
 
+  &__pt-icon {
+    position: absolute;
+    top: 0rem;
+    left: -2.5rem;
+  }
 
-.section{
-    
-    perspective: 140rem;
-   
-    &:not(:last-child){
-        margin-bottom: 2rem;
+  &__tr-icon {
+    align-self: center;
+    position: absolute;
+    top: 1rem;
+    left: -1rem;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    padding: 0.4rem;
+    background-color: white;
+  }
+  &__sn-icon {
+    position: absolute;
+    top: 0rem;
+    left: -3rem;
+    z-index: 60;
+
+    background-color: #b4b7c2;
+    padding: 0.8rem;
+    font-size: 5rem;
+  }
+
+  &__container {
+    &--pt {
+      padding: 5rem 2rem 3rem 6rem;
+      background-color: $color-main-light;
     }
-    
-    &__pt-icon{
-        position: absolute;
-        top: 0rem;
-        left: -2.5rem;
-       
-        
+    &--tr {
+      z-index: 10;
+      justify-content: space-between;
 
+      display: flex;
+
+      padding: 1.5rem 2rem 1.5rem 3rem;
+      background-color: $color-main-light;
+    }
+    &--sn {
+      padding: 5rem 2rem 3rem 6rem;
+      background-color: $color-main-light;
     }
 
-    &__tr-icon{
-        align-self: center;
-        position: absolute;
-        top: 1rem;
-        left: -1rem;
-        border: 1px solid rgb(0, 0, 0);
-        border-radius: 50%;
-        padding: .4rem;
-        background-color: white;
-        
-    }
-    &__sn-icon{
-        position: absolute;
-        top: 0rem;
-        left: -3rem;
-        z-index: 60;
-        
-        background-color: #b4b7c2;
-        padding: .8rem;
-        font-size: 5rem;
-      
+    position: relative;
+  }
 
-    }
-    
-    &__container{
-       
-        
-      
-        &--pt{
-           
-
-
-            padding: 5rem 2rem 3rem 6rem;
-            background-color: $color-main-light;
-          
-
-
-
-        }
-        &--tr{
-          
-            z-index: 10;
-            justify-content: space-between;
-
-            display: flex;
-           
-            padding: 1.5rem 2rem 1.5rem 3rem;
-            background-color: $color-main-light;
-
-
-           
-        } 
-        &--sn{
-            padding: 5rem 2rem 3rem 6rem;
-            background-color: $color-main-light;
-
-        }
-        
-        
-
-        position: relative;
-     
-
-
-    }
-    
-    &__from-info{
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-
-    }
-    
-
-    &__from{
-        font-size: 1.4rem;
-        font-weight: 400;
-
-    }
-    &__direction{
-        font-size: 1.4rem;
-        font-weight: 200;
-       
-
-    }
-    &__time{
-        font-size: 1.4rem;
-    }
-    &__duration{
-        font-size: 1.7rem;
-        padding: 3rem;
-       
-    }
-    &__to{
-
-    }
-}
-
-.routes{
+  &__from-info {
     display: flex;
-    flex-direction: row-reverse;
-    @media screen and (max-width: 1000px){
-        flex-direction: column;
-       
-    }
-    padding: 2rem;
-   
-    @media screen and (max-width: 600px){
-       padding: 1rem;
-       
-    }
-    &__journeys{
-       
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
 
-    }
-    &__map-wrap{
-        flex: 1;
-        height: 40vw;
-        width: 100%;
-        position: sticky;
-        top: 10vh;
-        bottom: 20vh;
-       
-        padding: 1rem;
-        margin: 2rem;
-        @media screen and (max-width: 1000px){
-       
-            margin: 0;
-            padding: 1rem 0;
-            width: 100%;
-            flex: 0 0 40vh;
-            z-index: 40;
-            top: 0;
-            background-color: $color-main;
-        }
-         
-       
+  &__from {
+    font-size: 1.4rem;
+    font-weight: 400;
+  }
+  &__direction {
+    font-size: 1.4rem;
+    font-weight: 200;
+  }
+  &__time {
+    font-size: 1.4rem;
+  }
+  &__duration {
+    font-size: 1.7rem;
+    padding: 3rem;
+  }
+  &__to {
+  }
+}
 
-    }
-    &__map{
-        
-        width: 100%;
-        height: 100%;
-        
+.routes {
+  display: flex;
+  flex-direction: row-reverse;
+  @media screen and (max-width: 1000px) {
+    flex-direction: column;
+  }
+  padding: 2rem;
 
+  @media screen and (max-width: 600px) {
+    padding: 1rem;
+  }
+  &__journeys {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  &__map-wrap {
+    flex: 1;
+    height: 40vw;
+    width: 100%;
+    position: sticky;
+    top: 10vh;
+    bottom: 20vh;
+
+    padding: 1rem;
+    margin: 2rem;
+    @media screen and (max-width: 1000px) {
+      margin: 0;
+      padding: 1rem 0;
+      width: 100%;
+      flex: 0 0 40vh;
+      z-index: 40;
+      top: 0;
+      background-color: $color-main;
     }
+  }
+  &__map {
+    width: 100%;
+    height: 100%;
+  }
 }
