--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,13 +1,13 @@
-@import './base';
-@import './header';
-@import './input';
-@import './app';
-@import './form';
-@import './text-input';
-@import './radio';
-@import './datetime';
-@import './calendar';
-@import './button';
-@import './journey';
-@import './footer';
-@import './activity';
+@import "./base";
+@import "./header";
+@import "./input";
+@import "./app";
+@import "./form";
+@import "./text-input";
+@import "./radio";
+@import "./datetime";
+@import "./calendar";
+@import "./button";
+@import "./journey";
+@import "./footer";
+@import "./activity";
